# vainy

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: Battery.tsx  Dashboard.tsx  Gpu.tsx  Keyboard.tsx  Logs.tsx  Performance.tsx  Settings.tsx  Sidebar.tsx  System.tsx  Thermals.tsx  Titlebar.tsx
apps/desktop/src/store/: useStore.ts
crates/battery/: Cargo.toml
crates/battery/src/: lib.rs
crates/gpu/: Cargo.toml
crates/gpu/src/: lib.rs
crates/keyboard/: Cargo.toml
crates/keyboard/src/: lib.rs
crates/power/: Cargo.toml
crates/power/src/: lib.rs
crates/system/: Cargo.toml
crates/system/src/: lib.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
crates/thermal/: Cargo.toml
crates/thermal/src/: lib.rs
crates/updater/: Cargo.toml
crates/updater/src/: lib.rs
daemon/: Cargo.toml
daemon/src/: main.rs
docs/: architecture.md  contributing.md  design-system.md
scripts/: auto-power-profile.service  auto-power-profile.sh
